<?xml version='1.0' encoding='UTF-8'?>
<resources>
    <string name="geo_location_accuracy_default">Accuracy: unknown</string>
    <string name="geo_location_accuracy">Accuracy: %1$s m</string>
    <string name="nocardspacetitle">No Storage Space</string>
    <string name="lowcardspacetitle">Low Storage Space</string>
    <string name="nocardspacedialog">The SD card on this device is full and you can no longer collect data. You must clear space on the SD card in order to continue.</string>
    <string name="lowcardspacedialog">You have %%% MB of storage space left on this device\'s SD card. Once the SD card is full, you will no longer be able to collect data.</string>
    <string name="getgeo">Capture Location</string>
    <string name="updategeo">Recapture Location</string>
...
    <string name="mustselectuser">Please select a user before continuing</string>
    <string name="surveys">Surveys</string>
    <string name="logged_in_as">Logged in as</string>
    <!--Misc-->
    <string name="okbutton">OK</string>
    <string name="delete_button">Delete</string>
    <string name="cancelbutton">Cancel</string>
    <string name="savebutton">Save</string>
    <string name="clearbutton">Clear</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_retry">Retry</string>
    <string name="delete">Delete</string>
...
    <!--app update service -->
    <string name="apk_update_service_no_update">You are running the latest version of the app.</string>
    <string name="apk_update_service_error_update">There was an error when updating the app. Please try again.</string>
    <string name="apk_update_service_error_no_internet">There was an error when updating the app. You are not connected to the internet.</string>

    <string name="locale_list_error_unknown_location">Unknown Location</string>
    <string name="location_timeout">Unable to get location</string>
    <string name="auto_geo_location_pending">Waiting for device location...</string>
    <string name="invalid_latitude">Invalid latitude</string>
    <string name="invalid_longitude">Invalid longitude</string>
    <string name="invalid_elevation">Invalid height</string>
    <string name="about_activity_title">About</string>
    <string name="about_view_title">Akvo Flow App</string>
...
